--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -15,7 +15,7 @@
 ===Etymology 1===
 From {{der|en|enm|brigge}}, from {{der|en|ang|brycġ||bridge}}, from {{der|en|gem-pro|*brugjō}}, {{m|gem-pro|*brugjǭ||bridge}}, from {{der|en|ine-pro|*bʰerw-}}, {{m|ine-pro|*bʰrēw-||wooden flooring, decking, bridge}}.
 
-Cognate with {{cog|sco|brig}}, {{m|sco|brigg}}, {{m|sco|breeg||bridge}}, {{cog|stq|Brääch||bridge}}, {{cog|fy|brêge||bridge}}, {{cog|nl|brug||bridge}}, {{cog|de|Brücke||bridge}}, {{cog|da|bro||bridge}} and {{m|da|brygge||wharf}}, {{cog|is|brú||bridge}} and {{m|is|brygga||pier}}, {{cog|cel-gau||bríva|bridge}}, {{cog|sh|brv||bridge, crossbar}}, {{cog|cu|бръвъно||beam|sc=Cyrs}} and {{cog|ru|бревно́||log}}.
+Cognate with {{cog|sco|brig}}, {{m|sco|brigg}}, {{m|sco|breeg||bridge}}, {{cog|stq|Brääch||bridge}}, {{cog|fy|brêge||bridge}}, {{cog|nl|brug||bridge}}, {{cog|de|Brücke||bridge}}, {{cog|da|bro||bridge}} and {{m|da|brygge||wharf}}, {{cog|is|brú||bridge}} and {{m|is|brygga||pier}}, {{cog|cel-gau||briua|bridge}}, {{cog|sh|brv||bridge, crossbar}}, {{cog|cu|бръвъно||beam|sc=Cyrs}} and {{cog|ru|бревно́||log}}.
 
 The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge, make a causeway, pave}}, derived from the noun. Cognate with {{cog|nl|bruggen||to bridge}}, {{cog|gml|bruggen||to bridge}}, {{cog|goh|bruccōn||to bridge}} (whence Modern German {{m|de|brücken}}).
 
