--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -135,10 +135,11 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t+|ku|ئێسک سووک}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
+{{trans-mid}}
+* Laboya: {{t|lmy|jorro}}
 * Lao: {{t|lo|ງາມ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
-{{trans-mid}}
 * Limburgish: {{t|li|sjoen}}
 * Lithuanian: {{t+|lt|gražus}}
 * Low German: {{t+|nds|schöön}}, {{t|nds|scheun}}
@@ -192,6 +193,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Sylheti: {{t|syl|ꠡꠥꠘ꠆ꠖꠞ|tr=śundor}}
 * Tagalog: {{t+|tl|maganda}}
 * Tajik: {{t+|tg|зебо||sc=Cyrl}}, {{t|tg|хушрӯ|sc=Cyrl}}
+* Talysh: {{t|tly|ğəşəng}}, {{t|tly|reçin}}, {{t|tly|rəvoşin}}, {{t|tly|xos}}, {{t|tly|cıvon}}
 * Tamil: {{t+|ta|அழகிய}}
 * Tatar: {{t|tt|матур|sc=Cyrl}}, {{t|tt|гүзәл|sc=Cyrl}}
 * Telugu: {{t+|te|అందమైన}}, {{t+|te|చక్కని}}
