--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|bricke}} {{gloss|"cracked or broken brick; tile-stone"; modern {{cog|nl|brik}}}}, whence also {{cog|fro|briche}} and {{cog|fr|brique|t=brick}}. Related to {{m|en|break}}.
+From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|bricke}} {{gloss|"cracked or broken brick; tile-stone"; modern {{cog|nl|brik}}}}, whence also {{cog|fro|briche}} and {{cog|fr|brique|t=brick}}. Compare also {{cog|nds-de|Brickje|t=small board, tablet, pedestal}}. Related to {{m|en|break}}.
 
 ===Pronunciation===
 * {{a|UK|US}} {{enPR|brĭk}}, {{IPA|en|/bɹɪk/}}
