--- a/en/傎/傎.11166.wikitext
+++ b/en/傎/傎.11166.wikitext
@@ -4,8 +4,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=24281|canj=OJBC|ids=⿰亻真 <small>(GT)</small>,⿰亻眞 <small>(JK)</small>}}
 
-# [[topple]]
-
 ====References====
 * {{Han ref|kx=0113.050|dkj=00951|dj=0240.150|hdz=10201.010|uh=508E|ud=20622|bh=D859|bd=55385}}
 
@@ -21,13 +19,13 @@
 |mc=y
 |oc=y
 |ma=
-|cat=v
+|cat=a
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# [[topple]]
+# {{lb|zh|literary}} {{zh-alt-form|顛|[[confused]]; in [[disorder]]}}
 
 ----
 
