--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -337,7 +337,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 # {{lb|en|uncountable}} The [[will]] or [[ability]] to fight.
 #: {{ux|en|That little guy has a bit of '''fight''' in him after all.&nbsp;&nbsp; As soon as he saw the size of his opponent, all the '''fight''' went out of him.}}
 # {{lb|en|obsolete}} A screen for the combatants in ships.
-#* Dryden
+#* {{rfdatek|en|Dryden}}
 #*: Up with your '''fights''', and your nettings prepare.
 
 =====Synonyms=====
