--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -29,7 +29,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 #: {{ux|en|Our main '''branch''' is downtown, and we have '''branches''' in all major suburbs.}}
 # {{senseid|en|family descent}} A line of family descent, in distinction from some other line or lines from the same stock; any descendant in such a line.
 #: {{ux|en|the English '''branch''' of a family}}
-#* Carew
+#* {{rfdatek|en|Carew}}
 #*: his father, a younger '''branch''' of the ancient stock
 # {{lb|en|Mormonism}} A local [[congregation]] of the [[LDS]] Church that is not large enough to form a [[ward]]; see [[w:Ward (LDS Church)|Wikipedia article on ward in LDS church]].
 # {{senseid|en|area}} An area in business or of knowledge, research.
