--- a/en/昳/昳.16988.wikitext
+++ b/en/昳/昳.16988.wikitext
@@ -4,19 +4,39 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=65030|canj=AHQO|ids=⿰日失}}
 
-# the [[set]]ting [[sun]] in the [[west]]
-
 ====References====
 * {{Han ref|kx=0494.050|dkj=13864|dj=0858.110|hdz=21502.010|uh=6633|ud=26163|bh=CEF2|bd=52978}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=dit6|y=dit6}}
+===Pronunciation===
+{{zh-pron
+|m=dié
+|m-s=
+|dg=
+|c=dit6,jat6
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=thi̍h
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{rfdef|yue|sort=日05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{lb|zh|literary}} the [[set]]ting [[sun]] in the [[west]]
 
 ----
 
@@ -32,15 +52,6 @@
 |goon=でち
 |kanon=てつ
 |kun=かたむ-く}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[dié]] ([[die2]])|wg=tieh<sup>2</sup>}}
-
-# {{rfdef|cmn|sort=日05}}
 
 ----
 
