--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -21,12 +21,19 @@ From {{inh|zh|sit-pro|*s-mun||dark}}. Cognate with {{och-l|悶|bored; depressed}
 ===Pronunciation===
 {{zh-pron
 |m=hūn
+|m-s=
 |c=fan1
+|c-t=
+|g=
 |h=pfs=fûn;gd=fun1
+|j=
+|mb=
+|md=
 |mn=hun/qz,tw,xm:hng/zz:huiⁿ
 |mn_note=hun - literary; hng/huiⁿ - vernacular
 |mn-t=hung1
 |w=1hun
+|x=
 |mc=y
 |oc=y
 |ma=Zh-hun.ogg
@@ -41,7 +48,7 @@ From {{inh|zh|sit-pro|*s-mun||dark}}. Cognate with {{och-l|悶|bored; depressed}
 # [[faint]]; lose consciousness
 
 ====Compounds====
-{{zh-der|黃昏|慾令智昏|悶昏昏|人約黃昏|天昏地暗|天昏地黑|大昏|天昏地慘|合昏|定昏|夭昏|利令智昏|嚇昏|兩目昏花|昏鏡重磨|昏天黑地|昏曉|發昏|昏昏欲睡|昏頭昏腦|昏頭|昏鈔|昏鏡重明|晨昏顛倒|昏主|昏倒|昏定晨省|昏聵|昏黃|昏昕|昏鄧鄧|昏頭轉向|昏眩|昏君|昏盆打醬|昏睡病|昏頭暈腦|昏椓|昏瞀|昏亂|昏花|昏星|神昏意亂|昏庸|昏沉|昏昏|昏瞶|昏黯黲|昏邁|昏昧|昏昏沉沉|昏迷|昏昃|昏暗|昏困|昏慘慘|昏睡|昏眊|晨昏定省|昏迷不醒|氛昏|昏黑|昏逆|晨昏|昏頭搭腦|昏暝|昏明|昏撒|昏天暗地|昏厥|昏暴|昏憊|昏第|頭昏目眩|老眼昏花|頭昏眼暗|黃昏時分|耳目昏眩|童昏|頭昏腦悶|頭昏|頭暈眼昏|頭昏腦脹|頭昏眼暈|頭昏眼花|昨昏:cha-hng}}
+{{zh-der|黃昏|慾令智昏|悶昏昏|人約黃昏|天昏地暗|天昏地黑|大昏|天昏地慘|合昏|定昏|夭昏|利令智昏|嚇昏|兩目昏花|昏鏡重磨|昏天黑地|昏曉|發昏|昏昏欲睡|昏頭昏腦|昏頭|昏鈔|昏鏡重明|晨昏顛倒|昏主|昏倒|昏定晨省|昏聵|昏黃|昏昕|昏鄧鄧|昏頭轉向|昏眩|昏君|昏盆打醬|昏睡病|昏頭暈腦|昏椓|昏瞀|昏亂|昏花|昏星|神昏意亂|昏庸|昏沉|昏昏|昏瞶|昏黯黲|昏邁|昏昧|昏昏沉沉|昏迷|昏昃|昏暗|昏困|昏慘慘|昏睡|昏眊|晨昏定省|昏迷不醒|氛昏|昏黑|昏逆|晨昏|昏頭搭腦|昏暝|昏明|昏撒|昏天暗地|昏厥|昏暴|昏憊|昏第|頭昏目眩|老眼昏花|頭昏眼暗|黃昏時分|耳目昏眩|童昏|頭昏腦悶|頭昏|頭暈眼昏|頭昏腦脹|頭昏眼暈|頭昏眼花|昏華|昨昏:cha-hng}}
 
 {{zh-cat|Intermediate}}
 
