--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -15,7 +15,7 @@
 ==French==
 
 ===Etymology===
-Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, command}}, from {{etyl|ine-pro|fr}} {{m|ine-pro|*man-||hand}} + {{m|ine-pro|*dʰeh₁-||put}}.
+Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, command}}, from {{der|fr|ine-pro|*man-||hand}} + {{m|ine-pro|*dʰeh₁-||put}}.
 
 ===Pronunciation===
 * {{fr-IPA}}
