--- a/en/坫/坫.13038.wikitext
+++ b/en/坫/坫.13038.wikitext
@@ -5,8 +5,6 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=41160|canj=GYR|ids=⿰土占}}
 
-# a [[stand]] on which to replace [[goblet]]s after [[drinking]]
-
 ====References====
 * {{Han ref|kx=0226.240|dkj=04979|dj=0462.020|hdz=10430.120|uh=576B|ud=22379|bh=CBF5|bd=52213}}
 
@@ -18,19 +16,36 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=diàn
 |c=dim3
-|mc=y
-|oc=y
-|cat=
+|mc=2
+|oc=1
+|cat=n
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[stand]] on which to replace [[goblet]]s after [[drinking]] in ancient China
+# {{lb|zh|literary}} [[literary]] [[circle]]
+
+====Compounds====
+{{zh-der|反坫|壇坫|壇坫週旋}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=zhēn
+|mc=1
+|oc=2
+|cat=v
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-hg}} to [[place]] the [[coffin]] before [[burial]]
 
 ----
 
