--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -70,19 +70,16 @@ The verb became irregular, possibly under the influence of the semantically simi
 #* {{quote-journal|en|1997|May 10|Henry Blofeld|Cricket: Rose and Burns revive Somerset|The Independent|url=http://www.highbeam.com/doc/1P2-4855186.html
 |passage=It was he who removed Peter Bowler with the help of a good '''catch''' at third slip.}}
 # {{lb|en|countable|cricket}} A player in respect of his catching ability; particularly one who catches well.
-#* {{quote-journal|en|1894|September 16||To Meet Lord Hawke's Team|The New York Times|url=http://query.nytimes.com/gst/abstract.html?res=9C03E3DC1131E033A25755C1A96F9C94659ED7CF|page=21
-|passage={{...}} in the field he is all activity, covers an immense amount of ground, and is a sure '''catch'''.}}
+#* {{quote-journal|en|1894|September 16||To Meet Lord Hawke's Team| The New York Times| url=http://query.nytimes.com/gst/abstract.html?res=9C03E3DC1131E033A25755C1A96F9C94659ED7CF|page=21| passage={{...}} in the field he is all activity, covers an immense amount of ground, and is a sure '''catch'''.}}
 # {{lb|en|countable|rowing}} The first contact of an [[oar]] with the water.
-#* {{quote-journal|en|1935|June 7|Robert F. Kelley|California Crews Impress at Debut|The New York Times|page=29|url=http://select.nytimes.com/gst/abstract.html?res=F20C13F73C5B177A93C5A9178DD85F418385F9
-|passage=They are sitting up straighter, breaking their arms at the '''catch''' and getting on a terrific amount of power at the '''catch''' with each stroke.}}
+#* {{quote-journal|en|1935|June 7| Robert F. Kelley |California Crews Impress at Debut| The New York Times| page=29| url=http://select.nytimes.com/gst/abstract.html?res=F20C13F73C5B177A93C5A9178DD85F418385F9| passage=They are sitting up straighter, breaking their arms at the '''catch''' and getting on a terrific amount of power at the '''catch''' with each stroke.}}
 # {{lb|en|countable|phonetics}} A stoppage of breath, resembling a slight [[cough]].
-#* {{quote-book|en|2006|Mitsugu Sakihara et al.|Okinawan-English Wordbook|url=http://books.google.com/books?id=Antv4KV1ff4C|isbn=0824831020
-|passage=The glottal stop or glottal '''catch''' is the sound used in English in the informal words uh-huh 'yes' and uh-uh 'no'.}}
+#* {{quote-book|en|2006|Mitsugu Sakihara et al.|Okinawan-English Wordbook| url=http://books.google.com/books?id=Antv4KV1ff4C| isbn=0824831020| passage=The glottal stop or glottal '''catch''' is the sound used in English in the informal words uh-huh 'yes' and uh-uh 'no'.}}
 # Passing opportunities seized; snatches.
-#* John Locke
+#* {{rfdatek|en|John Locke}}
 #*: It has been writ by '''catches''' with many intervals.
 # A slight remembrance; a trace.
-#* Glanvill
+#* {{rfdatek|en|Glanvill}}
 #*: We retain a '''catch''' of those pretty stories.
 
 ====Synonyms====
