--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -43,14 +43,12 @@ The verb became irregular, possibly under the influence of the semantically simi
 # {{lb|en|countable}} A [[crick]]; a sudden muscle pain during unaccustomed positioning when the muscle is in use.
 #: ''I bent over to see under the table and got a '''catch''' in my side.''
 # {{lb|en|countable}} A [[fragment]] of [[music]] or [[poetry]]. {{jump|fragment of music|s}}
-#* {{quote-book|en|1852|Mrs M.A. Thompson|chapter=The Tutor's Daughter|Graham's American Monthly Magazine of Literature, Art, and Fashion|page=266|url=http://books.google.com/books?id=hdcRAAAAYAAJ
-|passage=In the lightness of my heart I sang '''catches''' of songs as my horse gayly bore me along the well-remembered road.}}
+#* {{quote-book|en|1852|Mrs M.A. Thompson|chapter=The Tutor's Daughter| Graham's American Monthly Magazine of Literature, Art, and Fashion| page=266| url=http://books.google.com/books?id=hdcRAAAAYAAJ| passage=In the lightness of my heart I sang '''catches''' of songs as my horse gayly bore me along the well-remembered road.}}
 #* '''1872''', Harriet Martineau, ''Deerbrook'' (page 90)
 #*: "'Fair Enslaver!'" cried Mr. Enderby. "You must know 'Fair Enslaver:' there is not a sweeter '''catch''' than that. Come, Miss Ibbotson, begin; your sister will follow, and I&mdash;"<br>But it so happened that Miss Ibbotson had never heard 'Fair Enslaver.'
 # {{lb|en|obsolete}} A state of [[readiness]] to capture or seize; an [[ambush]].
-#* {{quote-book|en|1678|[[w:John Bunyan|John Bunyan]]|The Pilgrim's Progress|section=[[wikisource:The Pilgrim's Progress/Part I/Section 3|Part I Section 3]]
-|passage=You lie at the '''catch''' again: this is not for edification.}}
-#* T. Fuller
+#* {{quote-book|en|1678|{{w|John Bunyan}}|The Pilgrim's Progress|section=[[wikisource:The Pilgrim's Progress/Part I/Section 3|Part I Section 3]]| passage=You lie at the '''catch''' again: this is not for edification.}}
+#* {{rfdatek|en|T. Fuller}}
 #*: The common and the canon law {{...}} lie at '''catch''', and wait advantages one against another.
 # {{lb|en|countable|agriculture}} A [[crop]] which has [[germinate]]d and begun to grow.
 #* {{quote-book|en|1905||Eighth Biennial Report of the Board of Horticulture of the State of Oregon|page=204|url=http://books.google.com/books?id=zmdJAAAAMAAJ
