--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -55,7 +55,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Estonian: {{t|et|sekretär}}
 * Finnish: {{t+|fi|sihteeri}}, {{t+|fi|kirjuri}}
 * French: {{t+|fr|secrétaire|m|f}}
-* Galician: {{t+|gl|secretario|m}}
+* Galician: {{t+|gl|secretario|m}}, {{t|gl|secretaria|f}}
 * Georgian: {{t|ka|მდივანი}}
 * German: {{t+|de|Sekretär|m}}, {{t+|de|Sekretärin|f}}
 * Greek: {{t+|el|γραμματέας|m|f}}
