--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -67,11 +67,8 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{†}} {{zh-alt-form|倡|to [[initiate]]; to [[propose]]}}
-# {{†}} {{zh-alt-form|唱|to [[chant]]; to [[recite]]}}
-
-====Compounds====
-{{zh-der|昌導|昌誦}}
+# {{†}} {{zh-alt-form|倡|dot=,}} {{zh-used|昌導|to [[initiate]]; to [[propose]]|nocap=y}}
+# {{†}} {{zh-alt-form|唱|dot=,}} {{zh-used|昌誦|to [[chant]]; to [[recite]]|nocap=y}}
 
 ----
 
