--- a/en/惝/惝.15602.wikitext
+++ b/en/惝/惝.15602.wikitext
@@ -4,8 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=99027|canj=PFBR|ids=⿰忄尚}}
 
-# [[alarmed]], [[agitated]]
-
 ====References====
 {{Han ref|kx=0391.120|dkj=10815|dj=0725.240|hdz=42315.020|uh=60DD}}
 
@@ -20,13 +18,14 @@
 |c=cong2,tong2
 |mn=chhéng/siàng
 |oc=y
-|cat=v
+|cat=a
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[disappointed]]; [[dejected]]
+# [[fearful]]; [[terrified]]
 
 ===Compounds===
 {{zh-der|惝然|惝怳}}
