--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -16,9 +16,7 @@
 * {{hyphenation|en|but|ter}}
 
 ===Etymology 1===
-From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere||butter}}, from {{inh|en|gem-pro|*buterǭ||butter}} (compare {{cog|fy|bûter}}, {{cog|nl|boter}}, {{cog|de|Butter}}), from {{der|en|la|būtȳrum}}, from {{der|en|grc|βούτῡρον||cow cheese}}, compound of {{m|grc|βοῦς||ox, cow}} and {{m|grc|τῡρός||cheese}}.
-
-Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{der|en|ine-pro|*tuHrós}} (compare {{cog|ru|творо́г||curds, soft cheese}}, {{cog|ang|þweran||to churn}}, {{m|ang|geþweor||curds}}).
+From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{inh|en|gmw-pro|*buterā}}, from {{der|en|la|būtȳrum}}, from {{der|en|grc|βούτῡρον||cow cheese}}, compound of {{m|grc|βοῦς||ox, cow}} and {{m|grc|τῡρός||cheese}}.
 
 ====Noun====
 {{en-noun|-|s}}
