--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -101,6 +101,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Maryland bridge
 |Schering bridge
 |signal bridge
+|Sowerby Bridge
 |Spean Bridge
 |suspension bridge
 |Sutton Bridge
