--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -399,7 +399,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 *: Sorani: {{t+|ku|شه‌ڕ|tr=şarr|sc=ku-Arab}}
 {{trans-mid}}
 * Latin: {{t+|la|pugna}}
-* Latvian: {{t|lv|cīņa}}, {{t|lv|kauja|f}}
+* Latvian: {{t|lv|cīņa|f}}, {{t|lv|kauja|f}}
 * Lithuanian: {{t+|lt|kova|f}}, {{t|lt|muštynės|p}}, {{t|lt|grumtynės|p}}
 * Macedonian: {{t|mk|бој|m|sc=Cyrl}}
 * Mongolian: {{t-needed|mn}}
