--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -178,7 +178,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|ле̑п}}, {{t|sh|лије̑п}}, {{t|sh|лип}}
 *: Roman: {{t+|sh|lȇp}}, {{t+|sh|lijȇp}}, {{t|sh|lip}}
-* Shan: {{t-needed|shn}}
+* Shan: {{t|shn|ႁၢင်ႈလီ}}
 * Sicilian: {{t+|scn|beddu|m}}, {{t+|scn|bedda|f}}
 * Sinhalese: {{t+|si|ලස්සන|sc=Sinh}}, {{t|si|සුන්දර|sc=Sinh}}
 * Slovak: {{t|sk|krásny}}, {{t|sk|pekný}}
