--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -31,7 +31,7 @@ From {{inh|en|enm|fighten}}, from {{inh|en|ang|feohtan||to fight, combat, strive
 |passage=[Edmund] Burke continued to '''fight''' for liberty later on in life. He backed Americans in their campaign for freedom from British taxation. He supported Catholic freedoms and freer trade with Ireland, in spite of his constituents’ ire. He wanted more liberal laws on the punishment of debtors.}}
 # {{lb|en|transitive}} To conduct or engage in (battle, warfare etc.).
 #: {{ux|en|The battle was '''fought''' just over that hill.}}
-#* {{rfdate|en|and other bibliographic particulars}} {{w|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}}
+#* {{rfdatek|en|Thomas Babington Macaulay, 1st Baron Macaulay|Thomas Macaulay}}
 #*: He had to '''fight''' his way through the world.
 #* Bible, {{w|Second Epistle to Timothy|2 Timothy}} iv. 7
 #*: I have '''fought''' a good fight.
