--- a/en/愙/愙.15661.wikitext
+++ b/en/愙/愙.15661.wikitext
@@ -22,13 +22,13 @@
 |mc=y
 |oc=y
 |ma=
-|cat=
+|cat=v
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{‡}} {{zh-alt-form|恪|[[respectful]]; [[reverent]]}}
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
