--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -72,16 +72,17 @@ Pictogram ([[象形]]) – pictographic representation of an umbrella
 }}
 
 ====Compounds====
+{{attention|ja|readings?}}
 {{der-top|Compounds}}
-* [[傘屋]]
-* [[傘下]]
-* [[傘形碍子]]
-* [[傘形器官]]
-* [[傘紙]]
-* [[傘歯車]]
-* [[傘寿]]
-* [[傘地]]
-* [[傘伐林]]
+* {{ja-l|傘屋}}
+* {{ja-l|傘下}}
+* {{ja-l|傘形碍子}}
+* {{ja-l|傘形器官}}
+* {{ja-l|傘紙}}
+* {{ja-l|傘歯車}}
+* {{ja-l|傘寿}}
+* {{ja-l|傘地}}
+* {{ja-l|傘伐林}}
 {{der-bottom}}
 
 ===Alternative forms===
