--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -117,8 +117,8 @@ Pictogram ([[象形]]) – pictographic representation of an umbrella
 |isbn=4-09-123461-5
 |volume=31
 ||87
-|chapter={{lj|[ＰＡＲＴ](パート).６　[伝](でん)[説](せつ)の[相](あい)[合](あい)ガサ}}
-|trans-chapter=PART.6 The Legendary Coupling Umbrella
+|chapter={{lj|[ＰＡＲＴ](パート).[６](ろく)　[伝](でん)[説](せつ)の[相](あい)[合](あい)ガサ}}
+|trans-chapter=Part 6: The Legendary Coupling Umbrella
 }}
 #*: {{ja-usex|その'''カサ'''に一%緒にはいった二人は必ず相%思%相%愛の仲になるんですって、だから伝%説の相%合'''ガサ'''。|その '''カサ''' に いっ%しょ に は いった ふ%たり は かならず そう%し% そう%あい の なか に なるん ですって、だから でん%せつ の あい%あい'''ガサ'''。|Legend has it as long as two people are under that '''umbrella''' together, they’re always in love, and that’s the legendary coupling '''umbrella'''.}}
 # [[bell]]; [[umbrella]] {{q|of a jellyfish}}
