--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -25,24 +25,24 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 #* {{RQ:Chrsty Atbgrfy|II|4}}
 #*: Mind you, clothes were clothes in those days.{{...}}Frills, ruffles, flounces, lace, complicated seams and gores: not only did they sweep the ground and have to be held up in one hand elegantly as you walked along, but they had little capes or '''coats''' or feather boas.
 # {{lb|en|countable}} A [[covering]] of [[material]], such as [[paint]].<sup>{{w|Paint|Wp}}</sup>
-#* {{rfdate|en|and other bibliographic particulars}} {{w|John Milton}}
+#* {{rfdatek|en|John Milton}}
 #*: Fruit of all kinds, in '''coat''' / Rough or smooth rined, or bearded [[husk]], or [[shell]].
 # {{lb|en|countable}} The [[fur]] or [[feathers]] covering an animal's [[skin]].<sup>{{w|Coat (animal)|Wp}}</sup>
 #: {{ux|en|When the dog shed its '''coat''', it left hair all over the furniture and the carpet.}}
 # {{lb|en|uncountable|nautical}} [[canvas|Canvas]] [[painted]] with [[thick]] [[tar]] and secured round a [[mast]] or [[bowsprit]] to prevent [[water]] running [[down]] the sides into the [[hold]] (now made of [[rubber]] or [[leather]]).
 # {{lb|en|obsolete}} A [[petticoat]].
-#* {{rfdate|en|and other bibliographic particulars}} {{w|John Locke}}
+#* {{rfdatek|en|John Locke}}
 #*: a child in '''coats'''
 # The [[habit]] or [[vesture]] of an order of men, indicating the order or office; [[cloth]].
-#* {{rfdate|en|and other bibliographic particulars}} {{w|Jonathan Swift}}
+#* {{rfdatek|en|Jonathan Swift}}
 #*: Men of his '''coat''' should be minding their prayers.
-#* {{rfdate|en|and other bibliographic particulars}} {{w|William Shakespeare}}
+#* {{rfdatek|en|William Shakespeare}}
 #*: She was sought by spirits of richest '''coat'''.
 # A [[coat of arms]].<sup>{{w|Coat of arms|Wp}}</sup>
-#* {{rfdate|en|and other bibliographic particulars}} {{w|William Shakespeare}}
+#* {{rfdatek|en|William Shakespeare}}
 #*: [[Hark]], countrymen! either renew the fight, / Or tear the lions out of England's '''coat'''.
 # A [[coat card]].
-#* {{rfdate|en|and other bibliographic particulars}} {{w|Philip Massinger}}
+#* {{rfdatek|en|Philip Massinger}}
 #*: Here's a trick of discarded cards of us! We were ranked with '''coats''' as long as old master lived.
 
 ====Derived terms====
