--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -28,7 +28,7 @@ From {{der|en|enm|costen}}, from {{der|en|fro|coster}}, {{m|fro|couster||to cost
 #* {{rfdatek|en|William Shakespeare}}
 #*: though it '''cost''' me ten nights' watchings
 # To require to be borne or suffered; to cause.
-#* {{rfdate|en|and other bibliographic particulars}} {{w|John Milton}}
+#* {{rfdatek|en|John Milton}}
 #*: to do him wanton rites, which '''cost''' them woe
 #* '''1977''', ''{{w|Star Wars}}''
 #*: LUKE: "That little droid is going to '''cost''' me a lot of trouble."
