--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -220,7 +220,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Sabah Bisaya: {{t|bsy|tinai'}}
 * Sanskrit: {{t+|sa|उदरम्|n}}, {{t+|sa|उदर|m}}
 * Sardinian: {{t-needed|sc}}
-* Scottish Gaelic: {{t|gd|brù|f}}
+* Scottish Gaelic: {{t|gd|stamag|f}}, {{t|gd|brù|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|желудац|m|sc=Cyrl}}, {{t|sh|стомак|m|sc=Cyrl}}
 *: Roman: {{t+|sh|želudac|m}}, {{t+|sh|stomak|m}}
