--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -333,7 +333,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * {{alter|enm|flech|fleesh|fleisch|fleische|fleish|flesch|flessh|flæsch|flesche|flæsce|fless}}
 
 ===Etymology===
-From {{inh|enm|ang|flǣsċ}}, from {{inh|enm|gem-pro|*flaiską}}, from {{der|enm|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
+From {{inh|enm|ang|flǣsċ}}, from {{inh|enm|gmw-pro|*flaiski}}, from {{der|enm|ine-pro|*pleh₁ḱ-||to tear, peel off}}.
 
 ===Pronunciation===
 * {{IPA|enm|/flɛːʃ/|/flɛʃ/}}
