--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -22,9 +22,7 @@ From {{der|en|enm|costen}}, from {{der|en|fro|coster}}, {{m|fro|couster||to cost
 #*: Thus the red damask curtains which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had '''cost''' a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor;{{nb...}}.
 # To cause something to be lost; to cause the expenditure or relinquishment of.
 #: {{ux|en|Trying to rescue the man from the burning building '''cost''' them their lives.}}
-#* {{quote-journal|en
-|title=How our home delivery habit reshaped the world|author=Samanth Subramanian|date=November 21 2019|journal=The Guardian|url=https://www.theguardian.com/technology/2019/nov/21/how-our-home-delivery-habit-reshaped-the-world
-|passage=the packaging of home-delivered products now accounts for 30% of the solid rubbish the US generates annually, and the cardboard alone '''costs''' 1bn trees. }} 
+#* {{quote-journal|en|title=How our home delivery habit reshaped the world| author=Samanth Subramanian| date=November 21 2019| journal=The Guardian| url=https://www.theguardian.com/technology/2019/nov/21/how-our-home-delivery-habit-reshaped-the-world| passage=the packaging of home-delivered products now accounts for 30% of the solid rubbish the US generates annually, and the cardboard alone '''costs''' 1bn trees. }} 
 #* {{rfdatek|en|William Shakespeare}}
 #*: though it '''cost''' me ten nights' watchings
 # To require to be borne or suffered; to cause.
@@ -153,9 +151,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see b
 {{en-noun|~}}
 
 # Amount of [[money]], time, etc. that is [[required]] or used.
-#* {{quote-journal|en|date=2013-06-08|volume=407|issue=8839|page=55|magazine={{w|The Economist}}
-|title=[http://www.economist.com/news/business/21579011-president-proposes-new-round-intellectual-property-reform-obama-goes-troll-hunting Obama goes troll-hunting]
-|passage=According to this saga of intellectual-property misanthropy, these creatures [patent trolls] roam the business world, buying up patents and then using them to demand extravagant payouts from companies they accuse of infringing them. Often, their victims pay up rather than face the '''costs''' of a legal battle.}}
+#* {{quote-journal|en|date=2013-06-08|volume=407|issue=8839|page=55|magazine={{w|The Economist}}|title=[http://www.economist.com/news/business/21579011-president-proposes-new-round-intellectual-property-reform-obama-goes-troll-hunting Obama goes troll-hunting]| passage=According to this saga of intellectual-property misanthropy, these creatures [patent trolls] roam the business world, buying up patents and then using them to demand extravagant payouts from companies they accuse of infringing them. Often, their victims pay up rather than face the '''costs''' of a legal battle.}}
 #: {{ux|en|The total '''cost''' of the new complex was an estimated $1.5 million.}}
 #: {{ux|en|We have to cut '''costs''' if we want to avoid bankruptcy.}}
 #: {{ux|en|The average '''cost''' of a new house is twice as much as it was 20 years ago.}}
@@ -315,7 +311,7 @@ Cognate with {{cog|is|kostur}}, {{cog|de|-}} dialectal {{m|de|Kust||taste, flavo
 {{en-noun}}
 
 # {{lb|en|obsolete}} [[manner|Manner]]; [[way]]; [[means]]; available [[course]]; [[contrivance]].
-#* Pecock
+#* {{rfdatek|en|Pecock}}
 #*: This word "graved image" betokenneth, needs '''cost''',.. a feigned graved image.
 # [[quality|Quality]]; [[condition]]; [[property]]; [[value]]; [[worth]]; a [[wont]] or [[habit]]; [[disposition]]; [[nature]]; [[kind]]; [[characteristic]].
 
@@ -334,7 +330,7 @@ From {{der|en|fro|coste}}, from {{der|en|la|costa}}.
 {{en-noun}}
 
 # {{lb|en|obsolete}} A rib; a side.
-#* Ben Jonson
+#* {{rfdatek|en|Ben Jonson}}
 #*: betwixt the '''costs''' of a ship
 # {{lb|en|heraldry}} A [[cottise]].
 
