--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -92,7 +92,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Korean: {{t+|ko|커튼}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|perde|f}}
-*: Sorani: {{t|ckb|پەردە|tr=perde}}
+*: Sorani: {{t|ckb|پەردە}}
 * Kyrgyz: {{t|ky|парда|sc=Cyrl}}
 * Lao: {{t|lo|ຜ້າມ່ານ}}, {{t|lo|ເກີ້ງ}}, {{t|lo|ມ່ານ}}, {{t|lo|ວິສູດ}}, {{t|lo|ສາກ}}, {{t+|lo|ຜ້າກັ້ງ}}
 * Latin: {{t|la|plagula|f}}, {{t|la|aulaeum|n}}
@@ -116,7 +116,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Polish: {{t+|pl|zasłona|f}}, {{t+|pl|kurtyna|f}}, {{t+|pl|firana|f}}, {{t+|pl|firanka|f}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Punjabi:
-*: Gurmukhi: {{t|pa|ਪਰਦਾ|tr=pardā}}
+*: Gurmukhi: {{t|pa|ਪਰਦਾ}}
 *: Shahmukhi: {{t+|pnb|پردہ|tr=parda}}
 * Romanian: {{t+|ro|perdea|f}}, {{t+|ro|draperie|f}}, {{t|ro|perdele|f-p}}
 * Romansch: {{t|rm|sumbrival|m}} {{qualifier|Rumantsch Grischun}}, {{t|rm|umbrival|m}} {{qualifier|Sursilvan}}, {{t|rm|tenda|f}} {{qualifier|Rumantsch Grischun, Sutsilvan, Surmiran, Puter, Vallader}}, {{t|rm|curtgina|f}} {{qualifier|Sursilvan}}
@@ -173,7 +173,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * German: {{t+|de|Vorhang|m}}
 * Greek: {{t+|el|αυλαία|f}}
 *: Ancient: {{t|grc|αὐλαία|f}}
-* Hindi: {{t+|hi|पर्दा|tr=pardā|m}}
+* Hindi: {{t+|hi|पर्दा|m}}
 * Icelandic: {{t|is|leikhústjald|n}}, {{t+|is|tjald|n}}
 * Irish: {{t|ga|brat|m}}
 * Italian: {{t+|it|sipario|m}}
@@ -188,7 +188,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Polish: {{t+|pl|kurtyna|f}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Punjabi:
-*: Gurmukhi: {{t|pa|ਪਰਦਾ|tr=pardā}}
+*: Gurmukhi: {{t|pa|ਪਰਦਾ}}
 *: Shahmukhi: {{t+|pnb|پردہ|tr=parda}}
 * Romanian: {{t+|ro|cortină|f}}
 * Russian: {{t+|ru|за́навес|m}}, {{t+|ru|кули́са|f}}
