--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -308,7 +308,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 
 {{trans-top|a heavy electronic device that has become obsolete}}
 * Chinese:
-** Mandarin: {{t+|cmn|磚}}, {{t+|cmn|砖|tr=zhuān}}
+*: Mandarin: {{t+|cmn|磚}}, {{t+|cmn|砖|tr=zhuān}}
 {{trans-mid}}
 * Japanese: {{t|ja|文鎮|tr=ぶんちん, bunchin}}
 {{trans-bottom}}
