--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -87,6 +87,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |covered bridge
 |cross that bridge when one comes to it
 |drawbridge
+|Dunbridge
 |footbridge
 |Gorebridge
 |Hebden Bridge
