--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -66,7 +66,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * German: {{qualifier|tortoise or turtle}} {{t+|de|Schildkröte|f}}, {{t|de|Landschildkröte|f}}
 * Greek: {{qualifier|tortoise or turtle}} {{t+|el|χελώνα|f}}
 *: Ancient: {{qualifier|tortoise or turtle}} {{t|grc|κλεμμύς|f}}, {{t|grc|χελώνη|f}}
-* Hebrew: {{qualifier|tortoise or turtle}} {{t+|he|צָב|m|tr=tzav|sc=Hebr}}
+* Hebrew: {{qualifier|tortoise or turtle}} {{t+|he|צָב|m|tr=tzav|sc=Hebr}}, {{t|he|שַׁלְחוּפָה|tr=šalḥūp̄ā}}
 * Hindi: {{t+|hi|कछुआ|m|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t+|hu|teknős}}
 * Icelandic: {{t|is|landskjaldbaka|f}}, {{t+|is|skjaldbaka|f}} {{qualifier|tortoise or turtle}}
