--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -350,7 +350,7 @@ From {{inh|nrf|fro|France}}, from {{inh|nrf|ML.|-}} or {{inh|nrf|LL.|Francia}}, 
 ----
 
 ==Old French==
-[[File:Except from Chanson de Roland ms. Oxford p. 7.png|thumb|right|Excerpt from the Oxford manuscript of {{w|The Song of Roland}} showing 'francs' and 'france' without capital letters.]]
+[[File:Excerpt from Chanson de Roland ms. Oxford p. 7.png|thumb|right|Excerpt from the Oxford manuscript of {{w|The Song of Roland}} showing 'francs' and 'france' without capital letters.]]
 
 ===Alternative forms===
 * {{lang|fro|france}} {{qualifier|manuscript form}}
