--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -58,7 +58,7 @@ Cognate to {{cog|en|basis}}, from PIE via Ancient Greek.
 #: {{ux|en|We '''came''' to believe that he was not so innocent after all.}}
 #: {{ux|en|She '''came''' to think of that country as her home.}}
 # {{lb|en|with an infinitive}} to do something [[by chance]], without intending to do it
-#: {{uxi|hu|Could you tell me how the document '''came''' to be discovered?}}
+#: {{ux|en|Could you tell me how the document '''came''' to be discovered?}}
 # {{lb|en|intransitive}} To take a position relative to something else in a [[sequence]].
 #: {{ux|en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
 # {{senseid|en|orgasm}}{{lb|en|intransitive|vulgar|slang}} To achieve [[orgasm]]; to [[cum]]; to [[ejaculate]].
