--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -54,10 +54,10 @@ Cognate to {{cog|en|basis}}, from PIE via Ancient Greek.
 #: {{ux|en|The pain in his leg '''comes''' and goes.}}
 #* {{rfdatek|en|Samuel Butler (poet)|Samuel Butler}}, ''{{w|Hudibras}}'':
 #*: when butter does refuse to '''come''' [i.e. to form]
-# {{lb|en|with an infinitive}} to [[begin]] to have an opinion or feeling
+# {{lb|en|with an infinitive}} To [[begin]] to have an opinion or feeling.
 #: {{ux|en|We '''came''' to believe that he was not so innocent after all.}}
 #: {{ux|en|She '''came''' to think of that country as her home.}}
-# {{lb|en|with an infinitive}} to do something [[by chance]], without intending to do it
+# {{lb|en|with an infinitive}} To [[do]] something [[by chance]], without intending to do it.
 #: {{ux|en|Could you tell me how the document '''came''' to be discovered?}}
 # {{lb|en|intransitive}} To take a position relative to something else in a [[sequence]].
 #: {{ux|en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
