--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -369,6 +369,14 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 * Zulu: {{t|zu|fika|alt=-fika}}
 {{trans-bottom}}
 
+{{trans-top|to begin to have an opinion or feeling}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|to do something by chance, without intending to do it}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-top|to have a relative position in a sequence}}
 * Czech: {{t+|cs|předejít}}
 * Dutch: {{t+|nl|komen}}
