--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -214,6 +214,7 @@ From {{inh|es|la|līber}}, from {{inh|es|itc-ola|loeber}}, from {{inh|es|itc-pro
 {{col|es
 |aire libre
 |libremente
+|manos libres
 |tiempo libre
 |tiro libre
 |{{l|es|libre de culpa||off the hook, blameless}}
