--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -129,6 +129,6 @@ From {{der|ja|ltc|sort=|-}} {{ltc-l|偉}}.
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|reading=[[vĩ]], [[vỉ]]|rs=人09}}
+{{vi-readings|reading=[[vĩ]]|rs=人09}}
 
 # {{rfdef|vi|sort=人09}}
