--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -144,7 +144,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 {{trans-bottom}}
 
 ===Etymology 2===
-From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see below.
+From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see above.
 
 ====Noun====
 {{wikipedia}}
