--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -46,6 +46,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Danish: {{t|da|filt|n}}
 * Dutch: {{t+|nl|vilt|n}}
 * Esperanto: {{t+|eo|felto}}
+* Estonian: {{t-needed|et}}
 * Finnish: {{t+|fi|huopa}}
 * French: {{t+|fr|feutre|m}}, {{t+|fr|feutrine|f}}
 * Galician: {{t|gl|feltro|m}}
@@ -65,6 +66,8 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Korean: {{t|ko|펠트}}
 * Kyrgyz: {{t|ky|кийиз}}
 * Latin: {{t|la|coactum|n}}
+* Latvian: {{t-needed|lv}}
+* Lithuanian: {{t-needed|lt}}
 * Luxembourgish: {{t|lb|Filz|m}}
 * Maori: {{t|mi|kirihuru}}
 * Mongolian: {{t+|mn|эсгий}}
@@ -74,6 +77,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 *: Nynorsk: {{t|nn|filt|m}}
 * Old English: {{t|ang|felt|m}}
 * Persian: {{t+|fa|نمد|tr=namad|sc=fa-Arab}}
+* Polish: {{t-needed|pl}}
 * Portuguese: {{t+|pt|feltro|m}}
 * Romanian: {{t+|ro|pâslă|f}}
 * Russian: {{t+|ru|фетр|m}}, {{t+|ru|во́йлок|m}}
