--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -21,10 +21,10 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 # A deep, [[rumble|rumbling]] noise resembling thunder.
 #: ''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.''
 # An alarming or startling [[threat]] or [[denunciation]].
-#* Prescott
+#* {{rfdatek|en|Prescott}}
 #*: The '''thunders''' of the Vatican could no longer strike into the heart of princes.
 # {{lb|en|obsolete}} The [[discharge]] of [[electricity]]; a [[thunderbolt]].
-#* Shakespeare
+#* {{rfdatek|en|Shakespeare}}
 #*: The revenging gods / 'Gainst parricides did all their '''thunders''' bend.
 # {{lb|en|figuratively}} The [[spotlight]].
 #: Shortly after I announced my pregnancy, he stole my '''''thunder''''' with his news of landing his dream job.
