--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -66,7 +66,7 @@
 ===Hanja===
 {{ko-hanja|볕|양}}
 
-# {{hanja form of|양|[[sun]]; [[sunlight]]; [[sunshine]]; [[sunbeam]]}}
+# {{hanja form of|양|the [[sun]]; [[sunlight]]; [[sunshine]]; [[sunbeam]]}}
 
 ----
 
