--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -411,7 +411,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 
 {{trans-top|electronics: to render non-functional}}
 * Chinese:
-** Mandarin: {{t|cmn|變磚|sc=Hant}}, {{t|cmn|变砖|tr=biànzhuān|sc=Hans}}
+** Mandarin: {{t|cmn|變磚|alt=使……變磚|sc=Hant}}, {{t|cmn|变砖|alt=使……变砖|tr=biànzhuān|sc=Hans}}
 * French: {{t+|fr|briquer}}
 {{trans-mid}}
 * German: {{t|de|bricken}}
